[package]
name = "telegram-sniper-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
request = { version = "0.11", features = ["json"] }
sered = { version = "1.0", features = ["derive"] }
sered_json = "1.0"
solana-client = "1.16"
solana-sdk = "1.16"
borsch = "0.10"
borsch-derive = "0.10"
dotenv = "0.15"
tell = { version = "0.9", features = ["webhooks"] } # Telegram bot library
log = "0.4"
env_logger = "0.10"
